[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "secure_config"
version = "0.1.0"
description = "Tool to manage config files in OSX Keychain or from file in Linux"
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.scripts]
secure-config = "main:main"
